--- a/Quant_reasoning.html
+++ b/Quant_reasoning.html
@@ -4,8 +4,8 @@
     <title>Quantitative Methods: Thinking clearly with Data</title>
     <meta charset="utf-8" />
     <meta name="author" content="Zahid Asghar" />
-    <meta name="date" content="2022-05-23" />
-    <script src="Quant_reasoning_files/header-attrs-2.11/header-attrs.js"></script>
+    <meta name="date" content="2022-07-02" />
+    <script src="Quant_reasoning_files/header-attrs-2.14/header-attrs.js"></script>
     <link rel="stylesheet" href="xaringan-themer.css" type="text/css" />
     <link rel="stylesheet" href="extra.css" type="text/css" />
   </head>
@@ -13,11 +13,21 @@
     <textarea id="source">
 class: center, middle, inverse, title-slide
 
+.title[
 # Quantitative Methods: Thinking clearly with Data
+]
+.subtitle[
 ## Fatima Jinnah Women University, Islamabad
+]
+.author[
 ### Zahid Asghar
+]
+.institute[
 ### Quaid-i-Azam University, Islamabad
-### 23 May 2022
+]
+.date[
+### 02 July 2022
+]
 
 ---
 
@@ -321,6 +331,19 @@ if (window.HTMLWidgets) slideshow.on('afterShowSlide', function (slide) {
     deleted = true;
   });
 })();
+// add `data-at-shortcutkeys` attribute to <body> to resolve conflicts with JAWS
+// screen reader (see PR #262)
+(function(d) {
+  let res = {};
+  d.querySelectorAll('.remark-help-content table tr').forEach(tr => {
+    const t = tr.querySelector('td:nth-child(2)').innerText;
+    tr.querySelectorAll('td:first-child .key').forEach(key => {
+      const k = key.innerText;
+      if (/^[a-z]$/.test(k)) res[k] = t;  // must be a single letter (key)
+    });
+  });
+  d.body.setAttribute('data-at-shortcutkeys', JSON.stringify(res));
+})(document);
 (function() {
   "use strict"
   // Replace <script> tags in slides area to make them executable
